# FPGACompet

./: .gitignore  README.md  build.sbt  makefile  requirements.txt
algorithm/: requirements.txt
algorithm/cmodel/inc/: common.hpp  matrix33.hpp  net.hpp  res_block.hpp
algorithm/cmodel/src/: calc.cpp  load.cpp  print.cpp  quant_calc.cpp
algorithm/cmodel/test/: test_load_data.cpp  test_order.cpp  test_quantization.cpp
algorithm/pymodel/: lit_model.py  model.py  test.py  test_with_cmodel.py
board/: CMakeLists.txt
board/algo/inc/: common.hpp  net.hpp  quantized_res_block.hpp
board/algo/src/: load.cpp  quantize.cpp
board/algo/test/: test_quantization.cpp
board/common/: common.h  pack.h  pal.h  worker.c  worker.cpp
board/impl/: ip.c  net.c
board/sim/: ip.c  server.c
cmodel/: CMakeLists.txt
cmodel/inc/: common.hpp  conv_core.hpp  flow_data.hpp  matrix33.hpp  net.hpp  quantized_conv_core.hpp  quantized_flow_data.hpp  quantized_matrix33.hpp  quantized_net.hpp  quantized_res_block.hpp  res_block.hpp
cmodel/src/: calc.cpp  load.cpp  main.cpp  print.cpp  quantize.cpp  test_load_data.cpp  test_order.cpp
cmodel/test/: test_load_data.cpp  test_order.cpp  test_quantization.cpp  test_with_pymodel.cpp
comm/: .gitignore  README.md
comm/board/algo/inc/: conv_core.hpp  quantized_conv_core.hpp  quantized_flow_data.hpp  quantized_matrix33.hpp  res_block.hpp  (+1 more)
comm/board/common/: pack.h  worker.h
comm/board/impl/: ip.c  net.c
comm/board/sim/: main.c
comm/doc/: FPGA流程图.drawio  上位机流程图.drawio
comm/host/: main.py  params.py  requirements.txt  web_client.py  weights.py
comm/host/algo/: export.py  test_order.py
comm/host/app/: main_window.py
doc/: FPGA流程图.drawio
host/: .gitignore  constant.py  main.py  params.py  requirements.txt  ui.py  web_client.py
host/algo/: constant.py  modelv2.py  test_with_cmodel.py  train.py
host/app/: config.py  main_window.py
host/app/interfaces/: base_interface.py  home_interface.py  proc_interface.py
host/app/objects/: kernel_object.py
host/app/widgets/: argument_card.py  connection_card.py  custom_kernel_widget.py  gaussian_kernel_widget.py  home_interface.py  kernel_set_message_box.py  main_window.py
hw/spinal/adaptors/: AxiStreamWidthAdaptorI32O8.scala  AxiStreamWidthAdaptorI32O8Sim.scala  AxiStreamWidthAdaptorI8O32.scala  AxiStreamWidthAdaptorI8O32Sim.scala  FakeTop.scala  GenerateVerilog.scala  ProjectConfig.scala
hw/spinal/axi_lite_regs/: AxiLiteRegs.scala  AxiLiteRegsSim.scala  Config.scala  GenerateVerilog.scala  ProjectConfig.scala
hw/spinal/project/: Config.scala  ProjectConfig.scala
hw/spinal/test/: GenerateVerilog.scala  TestBench.scala  TestBenchSim.scala
hw/verilog/: cntpix.v  dbg_emio_outsig.v  dualth.v  gauss.v  grad.v  nms.v  plug_sc.v  rams.v  tb.v  top_core.v  top_set.v
pymodel/: config.py  dataset.py  export.py  lane_dataset.py  lit_model.py  lit_modelv2.py  model.py  modelv2.py  temp.py  test.py  test_order.py  test_with_cmodel.py  train.py
rtl/: .gitignore  README.md  makefile
rtl/hw/verilog/: StreamController_1.v  cntpix.v  conv.v  plug_sc.v  relu.v  tb_top_set.v  window.v
simGtkw/: AxiLiteRegs.gtkw
slave/common/: pack.h  pal.h  worker.c  worker.h
(+19 files in other folders)
